fixed flex wrap issue and overlapping

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -7,6 +7,7 @@
   display: flex;
   align-items: center;
   /*position: relative;*/
+  z-index: 999;
 }
 
 .footer {
@@ -38,8 +39,6 @@
   position: absolute;
   right: 15px;
   bottom: -2px;
-  /*font-size: 30px;*/
-  justify-content: center;
 }
 
 .footer-icons i {
