--- a/styles/home.css
+++ b/styles/home.css
@@ -6,10 +6,8 @@
   width: 100%;
   margin: auto;
   display: flex;
-  /*display: flex;*/
+  flex-wrap: wrap;
   justify-content: space-around;
-
-
 }
 
 .content-wrapper a {
